--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,7 +1,6 @@
 .header {
   height: 152px;
-  top: 0px;
-
+  width: 100%;
   background: #fafafa;
 }
 
@@ -10,10 +9,8 @@
   flex-direction: column;
   align-items: center;
   padding: 27px 32px;
-  margin: auto;
-  margin-top: 40px;
+  margin: 2rem auto;
   padding-bottom: 48px;
-  width: 315px;
   background: rgba(98, 0, 238, 0.06);
   border-radius: 17px;
 }
